<resources>
    <string name="app_name">CCT.pro - Cryptocurrency Tracking</string>
    <string name="title_home">Markets</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">News</string>
    <string name="title_signals">Icos</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_blockfolio">Blockfolio</string>
    <string name="title_login">Login</string>
    <string name="title_rate">Rate this App</string>

    <string name="title_signup">Signup</string>
    <string name="do_not_have_and_account_create_account">Do not have an account? <b> Create Account </b></string>
    <string name="already_have_and_account_create_account">Already have an account? <b> Sign In Now </b></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In Now</string>
    <string name="action_join">Join Now</string>
    <string name="scrub_empty">Tap and hold the graph to scrub.</string>
    <string name="scrub_format">Scrubbing value: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">CryptoCurrencyTracking.pro</string>
    <string name="forgot_your_password">Forgot Your Password?</string>

    <string-array name="currency">
        <item>USD</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>TWD</item>
        <item>ZAR</item>

    </string-array>
    <string name="title_activity_coin_market_fragment">CoinMarketFragment</string>
    <string name="tab_text_1">Favorites</string>
    <string name="tab_text_2">USD</string>
    <string name="tab_text_3">BTC</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_app_id"></string>

    <string name="email">e-mail adress</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="signIn">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="donot_have_account">Don"'"t have an account? Sign Up</string>
    <string name="account_exist">Already have an account? Sign In</string>
    <string name="required_field">This filed is required!</string>
    <string name="long_password">Password must be 3 characters long!</string>

    <string name="no_internet">Something went wrong, Cross check your internet connectivity and try again</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">1h</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">7d</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">24h</string>
    <string name="sender_badge" translatable="false">Coin</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">Details</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">Welcome to CCT</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Dark Mode</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="login_to_view_watchlist">Please login first to view your watchlist</string>
    <string name="wizard_skip">Skip</string>
    <string name="wizard_join">Join</string>
    <string name="welcome_amp_greetings"><![CDATA[Welcome & Greetings]]></string>
    <string name="an_ultimate_tracker">An ultimate crypto currency tracker</string>


</resources>
