<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:fontFamily="@font/font_medium"
        android:text="@string/welcome_amp_greetings"
        android:textSize="22sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:background="?android:colorBackground"
        android:elevation="10dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/logo" />

    </android.support.v7.widget.CardView>



    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary" />


    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:fontFamily="@font/font_regular"
        android:text="@string/an_ultimate_tracker"
        android:textSize="20sp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:fontFamily="@font/font_regular"
        android:text="@string/wizard_skip"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/join"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:fontFamily="@font/font_regular"
        android:text="@string/wizard_join"
        android:textSize="20sp" />
</RelativeLayout>